syntax = "proto3";

package secret_private;

option go_package = "github.com/evgenivanovi/gophkeeper/api/pb/secret/private";

import "secret/model.proto";

// __________________________________________________

message CreateDecodedSecretRequest {
  message Payload {
    secret.DecodedSecretData data = 1;
    int64 user_id = 2;
  }
  Payload payload = 1;
}

message CreateDecodedSecretResponse {
  message Payload {
    secret.EncodedSecret data = 1;
  }
  Payload payload = 1;
}

message CreateEncodedSecretRequest {
  message Payload {
    secret.EncodedSecretData data = 1;
    int64 user_id = 2;
  }
  Payload payload = 1;
}

message CreateEncodedSecretResponse {
  message Payload {
    secret.EncodedSecret data = 1;
  }
  Payload payload = 1;
}

service InternalSecretManagementAPI {

  rpc CreateDecoded(CreateDecodedSecretRequest)
      returns (CreateDecodedSecretResponse);

  rpc CreateEncoded(CreateEncodedSecretRequest)
      returns (CreateEncodedSecretResponse);

}

// __________________________________________________